...
        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24px"
                    app:contentInsetStartWithNavigation="0dp"
                    app:contentInsetStart="0dp"
...

        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="Log Book :"
                          android:id="@+id/logbook_title"
                          android:textStyle="bold"
                          android:paddingLeft="30dp"
                          android:paddingRight="30dp"
                          android:paddingTop="5dp"
                          android:paddingBottom="5dp"
                          android:layout_marginTop="10dp"
...
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_weight="1"
                              android:layout_marginLeft="10dp"
                              android:layout_marginRight="10dp">
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/title_textLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Title"
                            android:padding="20dp">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/title_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/colorPrimary"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/description_titleLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Description"
                            android:padding="20dp">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/description_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/colorPrimary"/>
                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:layout_marginLeft="20dp"
                                  android:layout_marginRight="20dp"
                                  android:layout_marginBottom="20dp"
                                  android:orientation="horizontal">
                        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:id="@+id/dateButton"
                                android:layout_weight="1"/>
                        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:id="@+id/timeButton"
                                android:layout_weight="1"/>

                    </LinearLayout>
...
                               app:srcCompat="@drawable/ic_baseline_photo_size_select_actual_24px"
                               android:layout_marginLeft="22dp"
                               android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
                </LinearLayout>
                <Button
                        android:id="@+id/submit_button"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="submit"/>

            </LinearLayout>

        </ScrollView>


...
