...
                          android:textSize="18sp"
                          android:layout_weight="1"
                          android:text="SmartLog"/>

                <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                           android:foregroundGravity="right"
                           android:id="@+id/delete_log"
                           app:srcCompat="@drawable/ic_baseline_delete_24px"
                           android:layout_marginRight="10dp"/>


                <ImageView android:layout_width="wrap_content" android:layout_height="match_parent"
                           android:foregroundGravity="right"
                           android:id="@+id/edit_log"
                           android:layout_marginLeft="10dp"
                           app:srcCompat="@drawable/ic_baseline_edit_24px"
                           android:layout_marginRight="10dp"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

...
                  android:textColor="#9e9e9e"
                  android:paddingLeft="5dp"
                  android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/logBook_title_content"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="5dp"
...
                  android:paddingLeft="5dp"
                  android:textColor="#9e9e9e"
                  android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/title"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:paddingTop="5dp"
                  android:paddingBottom="5dp"
                  android:layout_marginTop="10dp"
                  android:paddingLeft="5dp"
...
